; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/pidfd/extr_pidfd_test.c_test_pidfd_poll_leader_exit_thread.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/pidfd/extr_pidfd_test.c_test_pidfd_poll_leader_exit_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [54 x i8] c"Child Thread: starting. pid %d tid %d ; and sleeping\0A\00", align 1
@SYS_gettid = common dso_local global i32 0, align 4
@CHILD_THREAD_MIN_WAIT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [35 x i8] c"Child Thread: DONE. pid %d tid %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @test_pidfd_poll_leader_exit_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @test_pidfd_poll_leader_exit_thread(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (...) @getpid()
  %4 = load i32, i32* @SYS_gettid, align 4
  %5 = call i32 @syscall(i32 %4)
  %6 = call i32 @ksft_print_msg(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i32 %3, i32 %5)
  %7 = load i32, i32* @CHILD_THREAD_MIN_WAIT, align 4
  %8 = call i32 @sleep(i32 %7)
  %9 = call i32 (...) @getpid()
  %10 = load i32, i32* @SYS_gettid, align 4
  %11 = call i32 @syscall(i32 %10)
  %12 = call i32 @ksft_print_msg(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0), i32 %9, i32 %11)
  ret i8* null
}

declare dso_local i32 @ksft_print_msg(i8*, i32, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @syscall(i32) #1

declare dso_local i32 @sleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
